<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/alfa_slab_one"
        android:includeFontPadding="false"
        android:text="@string/heading"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="423dp"
        android:contentDescription="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/game" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_margin="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:isScrollContainer="false"
        android:keepScreenOn="false"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_marginBaseline="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/aodo"
                android:cropToPadding="true"
                android:minHeight="48dp"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="0"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/bodo"
                android:cropToPadding="true"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="1"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/jodo"
                android:cropToPadding="true"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="2"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/podo"
                android:cropToPadding="true"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="3"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/eodo"
                android:cropToPadding="true"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="4"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/fodo"
                android:cropToPadding="true"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="5"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/godo"
                android:cropToPadding="true"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="6"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/hodo"
                android:cropToPadding="true"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="7"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/iodo"
                android:cropToPadding="true"
                android:onClick="playerTap"
                android:padding="20sp"
                android:scaleType="fitCenter"
                android:tag="8"
                android:visibility="visible"
                tools:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/O_s_turn_tap_to_play"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Play Again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Status" />

</androidx.constraintlayout.widget.ConstraintLayout>